# AETHER-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  MANIFEST.in  Makefile  README.md  RULES.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  vercel.json
.agent/workflows/: publish-vscode-extension.md
.github/workflows/: ci.yml  docker-build-test.yml  publish-pypi.yml
aetherai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: redis.conf
config/nginx/: nginx.conf
docs/: PUBLISHING.md
extension/: CHANGELOG.md  nexus-ai-terminal-extension-0.1.0.vsix  package.json  tsconfig.json
extension/src/: extension.ts
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: CTA.tsx  DownloadSection.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Pricing.tsx  Terminal.tsx  TerminalWindow.tsx
frontend/src/components/docs/: DocContent.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/components/docs/sections/: AdvancedDoc.tsx  CommandsDoc.tsx  DeveloperDoc.tsx  GettingStartedDoc.tsx  HomeDoc.tsx  ModelsDoc.tsx  SecurityDoc.tsx  TasksDoc.tsx
frontend/src/components/ui/: Button.tsx  CardStack.tsx  MovingBorder.css  MovingBorder.tsx  Sparkles.tsx  TextGenerateEffect.tsx  floating-navbar.tsx
frontend/src/docs/: advanced-features.md  commands.md  developer-guide.md  getting-started.md  index.md  models.md  security.md  tasks.md
frontend/src/pages/: Documentation.tsx
terminal/: .dockerignore  Dockerfile  Dockerfile.dev  __init__.py  api_client.py  code_agent.py  context_engine.py  dashboard_tui.py  database_manager.py  developer_tools.py  docker_manager.py  high_priority_commands.py  history.py  main.py  mcp_manager.py  pair_programmer.py  persona_manager.py  requirements-dev.txt  requirements.txt  skills.md  skills_manager.py  smart_rag.py  streaming.py  tui_app.py  voice.py  web_admin.py  web_agent.py  web_search.py  workflow_engine.py
terminal/tests/: test_advanced_features.py
