[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherai"
version = "1.0.0"
description = "AetherAI - Production-ready, secure, multi-model AI terminal assistant with RAG, voice, and developer tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kunj Shah", email = "kunjshah.cloudcomputing@gmail.com" }
]
maintainers = [
    { name = "Kunj Shah", email = "kunjshah.cloudcomputing@gmail.com" }
]
license = { file = "LICENSE" }
keywords = [
    "ai",
    "terminal",
    "assistant",
    "llm",
    "gemini",
    "groq",
    "ollama",
    "openai",
    "rag",
    "voice",
    "cli",
    "developer-tools",
    "code-review",
    "productivity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed"
]

dependencies = [
    # Core AI APIs (at least one required)
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "openai>=1.30.0",
    "ollama>=0.3.0",
    
    # Interface (TUI & CLI)
    "textual>=0.70.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    
    # System & Utilities (required)
    "psutil>=6.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "typing-extensions>=4.12.0",
    "pydantic>=2.7.0",
    
    # Common optional dependencies
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "docker>=7.1.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.2.2",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.1",
    "pip-audit>=2.6.3",
    "pre-commit>=3.7.0",
]

# Voice features
voice = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gTTS>=2.5.0",
    "playsound>=1.3.0",
    "pyaudio>=0.2.14",
]

# Web search and scraping
web = [
    "duckduckgo-search>=6.0.0",
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12.3",
]

# RAG and knowledge base
rag = [
    "chromadb>=1.1.1",
    "sentence-transformers>=2.7.0",
    "PyPDF2>=3.0.1",
]

# Web server
server = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

# Full installation
full = [
    "aetherai[voice,rag,server,web]",
]

# All optional features
all = [
    "aetherai[dev,voice,rag,server,web]",
]

[project.scripts]
aetherai = "terminal.main:main"
nexus-ai = "terminal.main:main"

[project.urls]
Homepage = "https://kunjshah95.github.io/NEXUS-AI.io/"
Documentation = "https://kunjshah95.github.io/NEXUS-AI.io/docs"
Repository = "https://github.com/KunjShah95/NEXUS-AI.io.git"
Issues = "https://github.com/KunjShah95/NEXUS-AI.io/issues"
Changelog = "https://github.com/KunjShah95/NEXUS-AI.io/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["terminal*"]
exclude = [
    "tests*", 
    "docs*", 
    "frontend*", 
    "extension*", 
    "documentation-site*",
    "__pycache__",
    "*.pyc",
    ".git*"
]

[tool.setuptools.package-data]
terminal = ["py.typed", "*.yaml", "*.json", "*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | node_modules
    | dist
    | build
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["terminal/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
