[metadata]
name = aetherai
version = 1.0.0
description = AetherAI - Production-ready, secure, multi-model AI terminal assistant
author = Kunj Shah
author_email = kunjshah.cloudcomputing@gmail.com
url = https://github.com/KunjShah95/NEXUS-AI.io
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.32.0
    PyYAML>=6.0.1
    rich>=13.7.0
    python-dotenv>=1.0.0

[options.packages.find]
include = terminal*
exclude = tests*, docs*, frontend*, extension*

[options.entry_points]
console_scripts =
    aetherai = terminal.main:main
